# N-Body-Simulation

./: README.md  meson.build  org.celestia.n-body.json
src/: Body.hpp  Constant.hpp  Constants.hpp  Graphics.cpp  Graphics.hpp  Main.cpp  Math.cpp  Math.hpp  Simulator.cpp  Simulator.hpp  meson.build
